# Multimodal-Future-Prediction

./: .gitattributes  README.md  VERSION  config.py  dataset_loader.py  emd_cpi.py  encoder.py  extract_frames.py  net.py  parse_annotation.py  test.py  utils_np.py  utils_tf.py  wemd.py
CPI/: CPI-test.py  CPI-train.py  Environment.py  Pedestrian.py  Vehicle.py  utils.py
wemd/: CMakeLists.txt  blitz_util_SS.h  lift.h  lift_impl.h  lifting-schemes.h  sparse.h  wemd_impl.cpp  wemd_impl.h
